[package]
name = "debugfs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Paul Tagliamonte <paultag@gmail.com>"]
repository = "https://github.com/paultag/debugfs"
description = ""

[dependencies]
anyhow = "1"
arigato = { path = "../arigato" }
futures = "0"
http = "1"
http-body-util = "0"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = "0"
pin-project = "1"
reqwest = "0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0"
tokio-tar = "0"
tokio-util = { version = "0", features = ["tracing", "compat"] }
tracing = "0"
tracing-subscriber = "0"
xz2 = "0"
